--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "./node_modules/.bin/cypress open",
+    "test": "npx cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
